# ai-secrets-guard

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml  scan.yml
examples/: README.md
examples/vulnerable_project/: app.py  mcp_config.json  requirements.txt
src/ai_secrets_guard/: __init__.py  cli.py
src/ai_secrets_guard/core/: config.py  models.py  scoring.py  severity.py
src/ai_secrets_guard/probe/: judge.py  payloads.py  runner.py
src/ai_secrets_guard/report/: __init__.py  html.py  json_report.py  markdown.py
src/ai_secrets_guard/report/templates/: base.html  report.html
src/ai_secrets_guard/scan/: deps.py  mcp_audit.py  prompt_injection.py  scanner.py  secrets.py
tests/: conftest.py  test_cli.py  test_core.py
tests/test_probe/: test_judge.py  test_payloads.py  test_runner.py
tests/test_report/: test_reports.py
tests/test_scan/: test_deps.py  test_mcp_audit.py  test_prompt_injection.py  test_scanner.py  test_secrets.py
